imperative-tests/tests/collisions/exact.stderr
error: Opcode collides with other opdcode
 --> $DIR/exact.rs:8:17
  |
8 |     #[ opcode = "0xff_ff_ff" ]
  |                 ^^^^^^^^^^^^

error: Collides with this opcode
 --> $DIR/exact.rs:6:17
  |
6 |     #[ opcode = "0xff_ff_ff" ]
  |                 ^^^^^^^^^^^^
